fixing logo positioning on mobile

--- a/app/scss/styles.scss
+++ b/app/scss/styles.scss
@@ -282,9 +282,12 @@
                 }
                 
                 
-                a img{
-                    padding-top: 30px; 
+                a {
+                    align-items: center;
+                    img{
+
                     width: 150px; 
+                    }
                 }
             
 
